Quick fix and comment

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html ng-app="sampleApp">
+<html ng-app="app">
   <head>
   </head>
-  <body ng-controller="SampleCtrl">
+  <body ng-controller="Ctrl">
     <div class="header">
       <h1 ng-style="{'background-color': 'rgb(' + data.r + ',' + data.g + ',' + data.b +')'}">
 	Afro Circus! {{ data.r }} : {{ data.g }} : {{ data.b }}
