--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,7 +5,7 @@
   <body ng-controller="Ctrl">
     <div class="header">
       <h1 ng-style="{'background-color': 'rgb(' + data.r + ',' + data.g + ',' + data.b +')'}">
-	Afro Circus! {{ data.dsensor }} : {{ data.g }} : {{ data.b }}
+	Afro Circus! {{ data.r }} : {{ data.g }} : {{ data.b }}
       </h1>
     </div>
     <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
